--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,31 +8,56 @@
     <title>Discover Amazing places in Japan</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    <div class="header">
+    <header class="header">
         <div class="wrapper">
-            <div class="header__logo">
-                <a href="/" class="header__logo-link">
-                    <img src="./img/svg/odigo-logo.svg" alt="logo" class="header_logo-pic">
-                </a>
+            <div class="header_wrapper">
+                <div class="header__logo">
+                    <a href="/" class="header__logo-link">
+                        <img src="./img/svg/odigo-logo.svg" alt="logo" class="header_logo-pic">
+                    </a>
+                </div>
+                <nav class="header__nav">
+                    <ul class="header__list">
+                        <li class="header__item">
+                            <a href="#!" class="header__link">Articles</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#!" class="header__link">Locations</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#!" class="header__link">Videos</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#!" class="header__link">Sign in</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
-    </div>
-    <nav class="header__nav">
-        <ul class="header__list">
-            <li class="header__item">
-                <a href="#!" class="header__link"></a>
-            </li>
-            <li class="header__item">
-                <a href="#!" class="header__link"></a>
-            </li>
-            <li class="header__item">
-                <a href="#!" class="header__link"></a>
-            </li>
-            <li class="header__item">
-                <a href="#!" class="header__link"></a>
-            </li>
-        </ul>
-    </nav>
+    </header>
+    <main class="main">
+        <section class="intro">
+            <div class="wrapper">
+                <h1 class="intro__title">
+                    Discover Amazing places in Japan
+                </h1>
+                <p class="intro__subtitle">
+                    Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over. Being gorgeous with belly side up i could pee on this if i had the energy but under the bed, for attack the child, open the door, 
+                </p>
+                <form class="search-form">
+                    <fieldset class="search-form__wrap">
+                        <p class="seardh-form__info">
+                            <input type="text" class="search-form__field" placeholder="What would you like to do?">
+                            <input type="text" class="search-form__field" placeholder="Where would you like to go?">
+                            <button type="submit" class="search-form__submit">search</button>
+                        </p>
+                    </fieldset>
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
